Add comics searcher
