# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API for loading XKCD comic titles by comic number range.",
+        "description": "API for loading XKCD comics by number range and searching comics by query words.",
         "title": "XKCD Helper API",
         "contact": {},
         "version": "1.0"
@@ -39,7 +39,45 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.Comic"
+                                "$ref": "#/definitions/dto.LoadComic"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to send JSON",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/search-comics": {
+            "get": {
+                "description": "Returns XKCD comics as \"number, title, image URL\" objects for the requested search query.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "comics"
+                ],
+                "summary": "Search comics",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search query words separated by +",
+                        "name": "q",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Matching comics",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.SearchComic"
                             }
                         }
                     },
@@ -54,10 +92,24 @@
         }
     },
     "definitions": {
-        "dto.Comic": {
+        "dto.LoadComic": {
             "type": "object",
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "num": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.SearchComic": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "image_url": {
                     "type": "string"
                 },
                 "num": {
